# RAG-ASSISTANT

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: app.py  rag.py
backend/data/: data.txt
frontend/: package-lock.json
frontend/src/: App.css  App.js
